<resources>
    <string name="app_name">MvvmPetFinder</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="search_fragment_label">Search Fragment</string>
    <string name="results_fragment_label">Results Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="content_description_top_search">Image for top of search view</string>
    <string name="pet_type_string">What kind of pet are you looking for?</string>
    <string name="search">SEARCH</string>
    <string name="zip_code">Zip Code</string>
    <string name="expand_retract_filter">Extend or retract pet search filters</string>
    <string name="pet_image">Pet image</string>
    <string name="good_with_dogs">Good with dogs.</string>
    <string name="good_with_cats">Good with cats.</string>
    <string name="good_with_children">Good with children.</string>
    <string name="name_label">Name:</string>
    <string name="age_label">Age:</string>
    <string name="size_label">Size:</string>
    <string name="status_label">Status:</string>
    <string name="breed_label">Breed:</string>
    <string name="gender_label">Gender:</string>
    <string name="good_with_label">Good with:</string>
    <string name="attributes_label">Attributes:</string>
    <string name="pet_name_greeting">Meet %1$s!</string>
    <string name="meet">Meet</string>

    <string name="pet_name_with_label">Name: %1$s</string>
    <string name="pet_age_with_label">Age: %1$s</string>
    <string name="pet_breed_with_label">Breed: %1$s</string>
    <string name="pet_gender_with_label">Gender: %1$s</string>
    <string name="more_details">More details:</string>
    <string name="spayed_neutered">Spayed/Neutered</string>
    <string name="house_trained">House Trained</string>
    <string name="declawed">Declawed</string>
    <string name="special_needs">Special Needs</string>
    <string name="shots_current">Shots Current</string>
    <string name="no_results_found">No results found…</string>

</resources>
