<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pet_details.PetDetailsFragment"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:id="@+id/pet_name_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        android:text="@string/pet_name_greeting"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pet_images_pager"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/pet_name_greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/pet_images_pager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pet_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/more_details_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pet_description"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/more_details" />

            <!-- Start left side -->
            <TextView
                android:id="@+id/breed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/more_details_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/breed_label" />

            <TextView
                android:id="@+id/breed_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/more_details_label"
                app:layout_constraintStart_toEndOf="@id/breed_label"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                android:layout_marginTop="10dp"
                android:layout_marginStart="2dp"
                android:textSize="16sp"
                android:maxLines="2"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/breed_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/age_label" />

            <TextView
                android:id="@+id/age_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/breed_label"
                app:layout_constraintStart_toEndOf="@id/age_label"
                android:layout_marginTop="10dp"
                android:layout_marginStart="2dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/age_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/size_label" />

            <TextView
                android:id="@+id/size_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/age_label"
                app:layout_constraintStart_toEndOf="@id/size_label"
                android:layout_marginTop="10dp"
                android:layout_marginStart="2dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/size_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/status_label" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/size_label"
                app:layout_constraintStart_toEndOf="@id/status_label"
                android:layout_marginTop="10dp"
                android:layout_marginStart="2dp"
                android:textSize="16sp" />
            <!-- End left side -->

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <!-- Start right side -->
            <TextView
                android:id="@+id/good_with_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/more_details_label"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/good_with_label" />

            <ImageView
                android:id="@+id/good_with_dogs"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/more_details_label"
                app:layout_constraintStart_toEndOf="@id/good_with_label"
                android:visibility="visible"
                android:src="@drawable/good_with_dog"
                android:contentDescription="@string/good_with_dogs" />

            <ImageView
                android:id="@+id/good_with_cats"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/more_details_label"
                app:layout_constraintStart_toEndOf="@id/good_with_dogs"
                android:visibility="visible"
                android:src="@drawable/good_with_cat"
                android:contentDescription="@string/good_with_cats" />

            <ImageView
                android:id="@+id/good_with_children"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/more_details_label"
                app:layout_constraintStart_toEndOf="@id/good_with_cats"
                android:visibility="visible"
                android:src="@drawable/good_with_children"
                android:contentDescription="@string/good_with_children" />

            <TextView
                android:id="@+id/attributes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/good_with_label"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/attributes_label" />

            <CheckBox
                android:id="@+id/spay_neuter_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/attributes_label"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/spayed_neutered"
                android:clickable="false" />

            <CheckBox
                android:id="@+id/house_trained_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/spay_neuter_check"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/house_trained"
                android:clickable="false" />

            <CheckBox
                android:id="@+id/declawed_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/house_trained_check"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/declawed"
                android:clickable="false" />

            <CheckBox
                android:id="@+id/special_needs_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/declawed_check"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/special_needs"
                android:clickable="false" />

            <CheckBox
                android:id="@+id/shots_current_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/special_needs_check"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/shots_current"
                android:clickable="false" />

            <!-- End right side -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>