<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchFragment">

    <ImageView
        android:id="@+id/search_top_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/image_search_top"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_top_search" />

    <Spinner
        android:id="@+id/pet_type_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@id/zip_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_top_image" />

    <EditText
        android:id="@+id/zip_code"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@id/pet_type_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_top_image"
        android:autofillHints="@string/zip_code"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="5"
        android:labelFor="@id/zip_code" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pet_type_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/search" />

</androidx.constraintlayout.widget.ConstraintLayout>